--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -40,7 +41,7 @@
         />
       </div>
 
-      <select class="select">
+      <select class="select" name="filter">
         <option>Filter By Region</option>
         <option>All</option>
         <option>Africa</option>
